devel
-----

* fixed issue #2977: Documentation for db._createDatabase is wrong

* ui: added bind parameters to slow query history view

* fixed issue #1751: Slow Query API should provide bind parameters, webui should display them

* ui: fixed a bug when moving multiple documents was not possible

* fixed docs for issue #2968: Collection _key autoincrement value increases on error

* AQL CHAR_LENGTH(null) returns now 0. Since AQL TO_STRING(null) is '' (string of length 0)

* ui: now supports single js file upload for Foxx services in addition to zip files

* fixed a multi-threading issue in the agency when callElection was called 
  while the Supervision was calling updateSnapshot 

* added startup option `--query.tracking-with-bindvars` 

  This option controls whether the list of currently running queries
  and the list of slow queries should contain the bind variables used
  in the queries or not.

  The option can be changed at runtime using the commands

      // enables tracking of bind variables
      // set to false to turn tracking of bind variables off
      var value = true; 
      require("@arangodb/aql/queries").properties({ 
        trackBindVars: value 
      });

* index selectivity estimates are now available in the cluster as well

* fixed issue #2943: loadIndexesIntoMemory not returning the same structure 
  as the rest of the collection APIs

* fixed issue #2949: ArangoError 1208: illegal name

* fixed issue #2874: Collection properties do not return `isVolatile` 
  attribute

* potential fix for issue #2939: Segmentation fault when starting 
  coordinator node  

* fixed issue #2810: out of memory error when running UPDATE/REPLACE 
  on medium-size collection

* fix potential deadlock errors in collector thread

* disallow the usage of volatile collections in the RocksDB engine 
  by throwing an error when a collection is created with attribute 
  `isVolatile` set to `true`. 
  Volatile collections are unsupported by the RocksDB engine, so 